@@ -49,6 +49,8 @@ Minor changes:
    against expected results, making it easier to use bounded regexps. [SW]
  * @destination (for variable exits) is now a standard attribute, and has
    a helpfile. [MG]
+ * Sound is now propagated through audible variable exits. Suggested by 
+   Mercutio. [SW]
 
 Commands:
  * Added @mail/review for reading mail you've sent, and @mail/retract for
